// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PledgesByState matches snapshot with 1 pledge 1`] = `
<div>
  <div class="mb-1 py-8 rounded-lg ">
    <usamap-stub activestates="" class="text-grey-light"></usamap-stub>
  </div>
  <div class="flex flex-col items-center"><span class="text-2xl"><span class="font-light">States:</span> <span class="font-bold">0</span></span>
    <div class="relative"><select class="block appearance-none w-full py-1 px-4 pr-8 border border-primary bg-white rounded-md leading-tight focus:outline-none focus:bg-white focus:border-green-500">
        <option data-label="My States" value="[object Object]">
          My States
        </option>
        <option data-label="Specific Classroom" value="">
          Great Classroom Name - first grade!!!
        </option>
        <option data-label="School States" value="">
          School States
        </option>
      </select>
      <div class="pointer-events-none absolute flex items-center px-2 pt-2" style="right: 0px; top: 0px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-4 w-4">
          <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"></path>
        </svg></div>
    </div>
    <p class="text-sm">
      Countries: <b></b></p>
  </div>
</div>
`;

exports[`PledgesByState matches snapshot with multiple pledges 1`] = `
<div>
  <div class="mb-1 py-8 rounded-lg ">
    <usamap-stub activestates="NY,GA" class="text-grey-light"></usamap-stub>
  </div>
  <div class="flex flex-col items-center"><span class="text-2xl"><span class="font-light">States:</span> <span class="font-bold">2</span></span>
    <div class="relative"><select class="block appearance-none w-full py-1 px-4 pr-8 border border-primary bg-white rounded-md leading-tight focus:outline-none focus:bg-white focus:border-green-500">
        <option data-label="My States" value="[object Object]">
          My States
        </option>
        <option data-label="Specific Classroom" value="">
          Great Classroom Name - first grade!!!
        </option>
        <option data-label="School States" value="">
          School States
        </option>
      </select>
      <div class="pointer-events-none absolute flex items-center px-2 pt-2" style="right: 0px; top: 0px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-4 w-4">
          <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"></path>
        </svg></div>
    </div>
    <p class="text-sm">
      Countries: <b>United Kingdom, United States</b></p>
  </div>
</div>
`;
